--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,39 @@
 body{
-    background-color: aqua;
+    background-color: rgb(251, 228, 253);
+    margin: 2em 4em 2em 4em;
+}
+.header h1{
+    text-align: center;
+
+}
+.header img{
+    width: 50%;
+    padding: 0 25% 0 25%;
+
+}
+.header{
+    display: block;
+}
+
+.para{
+    margin: 1em 1em 0 1em;
+    font-size: larger;
+    border-style: dashed;
+    padding: 0 0 1em 0;
+}
+.para h3{
+    text-align: center;
+    font-weight: 500;
+    font-size: x-large;
+    text-decoration: underline;
+    
+}
+.para img{
+    width: 50%;
+    padding: 0 25% 0 25%;
+    margin: 2em 0 1em 0;
+
+}
+.para p{
+    margin: 0 2em 0 2em;
 }
